@@ -1,2 +1,0 @@
-Autotest.add_discovery { "rails" }
-Autotest.add_discovery { "rspec2" }
