@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Sergei Kozlov"]
-  s.date = %q{2011-03-11}
+  s.date = %q{2011-03-29}
   s.description = %q{Allows building ExtJS/Rails reusable code in a DRY way}
   s.email = %q{sergei@playcode.nl}
   s.extra_rdoc_files = [
@@ -27,31 +27,7 @@ Gem::Specification.new do |s|
     "TODO",
     "app/controllers/netzke_controller.rb",
     "app/models/netzke_preference.rb",
-    "autotest/discover.rb",
     "config/database.yml",
-    "features/actions.feature",
-    "features/basic.feature",
-    "features/client-server.feature",
-    "features/complex_component.feature",
-    "features/component.feature",
-    "features/component_loader.feature",
-    "features/composition.feature",
-    "features/custom_css.feature",
-    "features/ext.direct.feature",
-    "features/file_inclusion.feature",
-    "features/i18n.feature",
-    "features/inheritance.feature",
-    "features/js_include.feature",
-    "features/nested_views.feature",
-    "features/persistence.feature",
-    "features/scopes.feature",
-    "features/step_definitions/custom_css_steps.rb",
-    "features/step_definitions/generic_steps.rb",
-    "features/step_definitions/touch_steps.rb",
-    "features/step_definitions/web_steps.rb",
-    "features/support/env.rb",
-    "features/support/paths.rb",
-    "features/touch.feature",
     "init.rb",
     "install.rb",
     "javascripts/base.js",
@@ -93,15 +69,6 @@ Gem::Specification.new do |s|
     "lib/netzke/stylesheets.rb",
     "lib/tasks/netzke_core_tasks.rake",
     "netzke-core.gemspec",
-    "spec/component/actions_spec.rb",
-    "spec/component/base_spec.rb",
-    "spec/component/composition_spec.rb",
-    "spec/component/configuration_spec.rb",
-    "spec/component/javascript_spec.rb",
-    "spec/component/state_spec.rb",
-    "spec/core_ext_spec.rb",
-    "spec/spec.opt",
-    "spec/spec_helper.rb",
     "stylesheets/core.css",
     "test/fixtures/roles.yml",
     "test/fixtures/users.yml",
@@ -187,6 +154,29 @@ Gem::Specification.new do |s|
     "test/rails_app/db/migrate/20110110132720_create_netzke_component_states.rb",
     "test/rails_app/db/schema.rb",
     "test/rails_app/db/seeds.rb",
+    "test/rails_app/features/actions.feature",
+    "test/rails_app/features/basic.feature",
+    "test/rails_app/features/client-server.feature",
+    "test/rails_app/features/complex_component.feature",
+    "test/rails_app/features/component.feature",
+    "test/rails_app/features/component_loader.feature",
+    "test/rails_app/features/composition.feature",
+    "test/rails_app/features/custom_css.feature",
+    "test/rails_app/features/ext.direct.feature",
+    "test/rails_app/features/file_inclusion.feature",
+    "test/rails_app/features/i18n.feature",
+    "test/rails_app/features/inheritance.feature",
+    "test/rails_app/features/js_include.feature",
+    "test/rails_app/features/nested_views.feature",
+    "test/rails_app/features/persistence.feature",
+    "test/rails_app/features/scopes.feature",
+    "test/rails_app/features/step_definitions/custom_css_steps.rb",
+    "test/rails_app/features/step_definitions/generic_steps.rb",
+    "test/rails_app/features/step_definitions/touch_steps.rb",
+    "test/rails_app/features/step_definitions/web_steps.rb",
+    "test/rails_app/features/support/env.rb",
+    "test/rails_app/features/support/paths.rb",
+    "test/rails_app/features/touch.feature",
     "test/rails_app/lib/tasks/.gitkeep",
     "test/rails_app/public/404.html",
     "test/rails_app/public/422.html",
@@ -195,8 +185,15 @@ Gem::Specification.new do |s|
     "test/rails_app/public/images/rails.png",
     "test/rails_app/public/robots.txt",
     "test/rails_app/script/rails",
-    "test/rails_app/spec/controllers/touch_controller_spec.rb",
-    "test/rails_app/spec/helpers/touch_helper_spec.rb",
+    "test/rails_app/spec/component/actions_spec.rb",
+    "test/rails_app/spec/component/base_spec.rb",
+    "test/rails_app/spec/component/composition_spec.rb",
+    "test/rails_app/spec/component/configuration_spec.rb",
+    "test/rails_app/spec/component/javascript_spec.rb",
+    "test/rails_app/spec/component/state_spec.rb",
+    "test/rails_app/spec/core_ext_spec.rb",
+    "test/rails_app/spec/spec.opt",
+    "test/rails_app/spec/spec_helper.rb",
     "test/rails_app/vendor/plugins/.gitkeep",
     "test/test_helper.rb",
     "test/unit/core_ext_test.rb",
@@ -221,14 +218,6 @@ Gem::Specification.new do |s|
   s.rubygems_version = %q{1.5.2}
   s.summary = %q{Build ExtJS/Rails components with minimum effort}
   s.test_files = [
-    "spec/component/actions_spec.rb",
-    "spec/component/base_spec.rb",
-    "spec/component/composition_spec.rb",
-    "spec/component/configuration_spec.rb",
-    "spec/component/javascript_spec.rb",
-    "spec/component/state_spec.rb",
-    "spec/core_ext_spec.rb",
-    "spec/spec_helper.rb",
     "test/rails_app/app/components/border_layout_panel.rb",
     "test/rails_app/app/components/component_loader.rb",
     "test/rails_app/app/components/component_with_actions.rb",
@@ -251,7 +240,6 @@ Gem::Specification.new do |s|
     "test/rails_app/app/components/kinda_complex_component/extra_stuff.rb",
     "test/rails_app/app/components/loader_of_component_with_custom_css.rb",
     "test/rails_app/app/components/localized_panel.rb",
-    "test/rails_app/app/components/nested_component.rb",
     "test/rails_app/app/components/scoped_components/deep_scoped_components/some_deep_scoped_component.rb",
     "test/rails_app/app/components/scoped_components/extended_scoped_component.rb",
     "test/rails_app/app/components/scoped_components/some_scoped_component.rb",
@@ -289,8 +277,20 @@ Gem::Specification.new do |s|
     "test/rails_app/db/migrate/20110110132720_create_netzke_component_states.rb",
     "test/rails_app/db/schema.rb",
     "test/rails_app/db/seeds.rb",
-    "test/rails_app/spec/controllers/touch_controller_spec.rb",
-    "test/rails_app/spec/helpers/touch_helper_spec.rb",
+    "test/rails_app/features/step_definitions/custom_css_steps.rb",
+    "test/rails_app/features/step_definitions/generic_steps.rb",
+    "test/rails_app/features/step_definitions/touch_steps.rb",
+    "test/rails_app/features/step_definitions/web_steps.rb",
+    "test/rails_app/features/support/env.rb",
+    "test/rails_app/features/support/paths.rb",
+    "test/rails_app/spec/component/actions_spec.rb",
+    "test/rails_app/spec/component/base_spec.rb",
+    "test/rails_app/spec/component/composition_spec.rb",
+    "test/rails_app/spec/component/configuration_spec.rb",
+    "test/rails_app/spec/component/javascript_spec.rb",
+    "test/rails_app/spec/component/state_spec.rb",
+    "test/rails_app/spec/core_ext_spec.rb",
+    "test/rails_app/spec/spec_helper.rb",
     "test/test_helper.rb",
     "test/unit/core_ext_test.rb",
     "test/unit/netzke_core_test.rb",
