@@ -8,6 +8,3 @@ Scenario: A panel should render nicely
   When I go to the SimpleComponent test page
   Then I should see "SimpleComponent"
   And I should see "Inner text"
-
-
-
