@@ -29,5 +29,3 @@ Feature: Composition
     When I press "Update east south from server"
     And I sleep 1 second
     Then I should see "Here's an update for south panel in east panel"
-
-
