@@ -8,6 +8,3 @@ Scenario: A component with external JS file included
   Given I am on the ComponentWithIncludedJs test page
   When I press "Print message"
   Then I should see "Some message shown in the body"
-
-
-
