@@ -1,15 +1,0 @@
-require 'spec_helper'
-
-# Specs in this file have access to a helper object that includes
-# the TouchHelper. For example:
-#
-# describe TouchHelper do
-#   describe "string concat" do
-#     it "concats two strings with spaces" do
-#       helper.concat_strings("this","that").should == "this that"
-#     end
-#   end
-# end
-describe TouchHelper do
-  pending "add some examples to (or delete) #{__FILE__}"
-end
